cabal-version:      2.4
name:               nuclear-threat
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A library for simple symbolic computations

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Danil Sheshenya
maintainer:         danil.sheshe@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules: Nuke

    -- Modules included in this library but not exported.
    other-modules: Expression, Operation, Simplify, Differentiate

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0, hashable
    hs-source-dirs:   src
    default-language: Haskell2010

executable Example
    main-is:          Example.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        nuclear-threat 

    hs-source-dirs:   .
    default-language: Haskell2010